--- a/site.html
+++ b/site.html
@@ -90,17 +90,20 @@ a{text-decoration:none;color:inherit}
 
 /* Resource cards */
 .resource-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:1.25rem;max-width:1100px;margin:0 auto}
-.resource-card{background:#fff;border-radius:12px;padding:1.5rem;border:1px solid #e2e8f0;border-left:4px solid #2B7DE9;transition:all 0.25s;display:flex;flex-direction:column}
-.resource-card:hover{box-shadow:0 8px 25px rgba(0,0,0,0.1);transform:translateY(-3px)}
-.resource-card .rc-icon{width:48px;height:48px;border-radius:10px;display:flex;align-items:center;justify-content:center;margin-bottom:1rem}
-.resource-card h3{font-size:0.95rem;font-weight:800;color:#0A1628;margin-bottom:0.4rem}
-.resource-card p{font-size:0.82rem;color:#64748B;line-height:1.5;flex:1;margin-bottom:1rem}
-.rc-btn{display:inline-block;font-size:0.75rem;font-weight:700;color:#2B7DE9;padding:0.4rem 0.8rem;border:1.5px solid #2B7DE9;border-radius:8px;transition:all 0.2s;min-height:32px;line-height:1.6}
-.rc-btn:hover{background:#2B7DE9;color:#fff}
-@media(max-width:768px){.resource-grid{grid-template-columns:repeat(2,1fr);gap:0.75rem}.resource-card{padding:1rem}.resource-card .rc-icon{width:36px;height:36px;margin-bottom:0.5rem}.resource-card h3{font-size:0.82rem}.resource-card p{font-size:0.72rem;margin-bottom:0.5rem}}
+.resource-card{background:#fff;border-radius:10px;padding:0.85rem 1rem;border:1px solid #e2e8f0;border-left:3px solid #2B7DE9;transition:all 0.2s;display:flex;align-items:center;gap:0.75rem}
+.resource-card:hover{box-shadow:0 4px 12px rgba(0,0,0,0.06);transform:translateY(-1px)}
+.resource-card .rc-icon{width:36px;height:36px;min-width:36px;border-radius:8px;display:flex;align-items:center;justify-content:center}
+.resource-card .rc-icon .ic{width:18px;height:18px}
+.rc-text{flex:1;min-width:0}
+.resource-card h3{font-size:0.8rem;font-weight:800;color:#0A1628;margin-bottom:0.1rem}
+.resource-card p{font-size:0.7rem;color:#64748B;line-height:1.4;margin:0}
+.rc-btn{display:inline-block;font-size:0.65rem;font-weight:700;color:#2B7DE9;margin-left:auto;white-space:nowrap;flex-shrink:0}
+.rc-btn:hover{text-decoration:underline}
+@media(max-width:768px){.resource-grid{grid-template-columns:1fr;gap:0.5rem}.resource-card{padding:0.7rem 0.85rem}}
 
 /* Featured */
 .featured-bg{background:linear-gradient(135deg,#f0f7ff 0%,#faf5ff 50%,#f0fdfa 100%);padding:4rem 1.5rem;position:relative}
+@media(max-width:768px){.featured-bg{padding:2.5rem 1rem}}
 .featured-bg::before{content:"";position:absolute;top:0;left:0;right:0;height:1px;background:linear-gradient(90deg,transparent,#e2e8f0,transparent)}
 .featured-grid{display:grid;grid-template-columns:repeat(4,1fr);gap:1rem;max-width:1280px;margin:0 auto}
 .featured-card{background:#fff;border-radius:12px;padding:1.25rem;transition:all 0.3s;position:relative;border:1px solid #e2e8f0;overflow:hidden}
@@ -116,7 +119,7 @@ a{text-decoration:none;color:inherit}
 .fc-btn{display:inline-block;font-size:0.75rem;font-weight:700;color:#2B7DE9;padding:0.4rem 0.8rem;border:1.5px solid #2B7DE9;border-radius:8px;transition:all 0.2s;cursor:pointer;min-height:36px;line-height:1.6}
 .fc-btn:hover{background:#2B7DE9;color:#fff}
 @media(max-width:1024px){.featured-grid{grid-template-columns:repeat(2,1fr)}}
-@media(max-width:640px){.featured-grid{grid-template-columns:1fr;gap:0.75rem}}
+@media(max-width:640px){.featured-grid{grid-template-columns:repeat(2,1fr);gap:0.6rem}.featured-card{padding:0.85rem}.fc-icon-wrap{display:none}.fc-name{font-size:0.82rem}.fc-desc{font-size:0.7rem;-webkit-line-clamp:2}.fc-btn{font-size:0.65rem;padding:0.3rem 0.6rem;min-height:28px}}
 
 /* Category tiles */
 .cat-tiles{display:grid;grid-template-columns:repeat(5,1fr);gap:0.75rem}
@@ -144,13 +147,13 @@ a{text-decoration:none;color:inherit}
 .grid-card:hover{box-shadow:0 12px 35px rgba(0,0,0,0.12);transform:translateY(-4px)}
 .grid-card:hover .gc-color-band{filter:brightness(1.08)}
 .grid-card.hidden{display:none}
-.gc-color-band{padding:2rem 1rem;display:flex;align-items:center;justify-content:center;flex-direction:column;gap:0.5rem;min-height:130px;transition:filter 0.3s}
-.gc-color-band .ic{fill:#fff;width:48px;height:48px;opacity:0.95}
-.gc-cat-label{font-size:0.58rem;font-weight:700;text-transform:uppercase;letter-spacing:1.5px;color:#fff;opacity:0.85}
-.gc-body{padding:0.85rem 1rem 1rem;flex:1;display:flex;flex-direction:column}
-.gc-name{font-size:0.85rem;font-weight:800;color:#0A1628;line-height:1.25;margin-bottom:0.25rem;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
-.gc-summary{font-size:0.75rem;color:#8E99A4;line-height:1.4;margin-bottom:0.65rem;flex:1;display:-webkit-box;-webkit-line-clamp:1;-webkit-box-orient:vertical;overflow:hidden}
-.gc-view-btn{display:block;font-size:0.7rem;font-weight:700;text-align:center;padding:0.45rem;border:1.5px solid;border-radius:8px;transition:all 0.2s;cursor:pointer;background:none;font-family:inherit;min-height:34px;width:100%}
+.gc-color-band{padding:0.75rem 0.5rem;display:flex;align-items:center;gap:0.5rem;min-height:0;transition:filter 0.3s}
+.gc-color-band .ic{fill:#fff;width:20px;height:20px;opacity:0.95;flex-shrink:0}
+.gc-cat-label{font-size:0.55rem;font-weight:700;text-transform:uppercase;letter-spacing:1px;color:#fff;opacity:0.9}
+.gc-body{padding:0.6rem 0.75rem 0.75rem;flex:1;display:flex;flex-direction:column}
+.gc-name{font-size:0.82rem;font-weight:800;color:#0A1628;line-height:1.25;margin-bottom:0.2rem;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
+.gc-summary{font-size:0.7rem;color:#8E99A4;line-height:1.35;margin-bottom:0.5rem;flex:1;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
+.gc-view-btn{display:block;font-size:0.68rem;font-weight:700;text-align:center;padding:0.35rem;border:1.5px solid;border-radius:6px;transition:all 0.2s;cursor:pointer;background:none;font-family:inherit;min-height:30px;width:100%}
 .gc-view-btn:hover{color:#fff !important}
 
 /* Detail modal */
@@ -169,8 +172,8 @@ a{text-decoration:none;color:inherit}
 .detail-storage{font-size:0.8rem;color:#64748B;line-height:1.7;margin-bottom:0.75rem;padding:0.75rem;background:#f8fafc;border-radius:8px;border-left:3px solid #06B6D4}
 
 @media(max-width:1100px){.product-grid{grid-template-columns:repeat(3,1fr)}}
-@media(max-width:768px){.product-grid{grid-template-columns:repeat(2,1fr)}.gc-color-band{min-height:110px;padding:1.5rem 0.75rem}}
-@media(max-width:480px){.product-grid{grid-template-columns:repeat(2,1fr);gap:0.65rem}.gc-color-band{min-height:100px;padding:1.25rem 0.5rem}.gc-color-band .ic{width:40px;height:40px}.gc-body{padding:0.65rem 0.75rem 0.75rem}.gc-name{font-size:0.8rem}}
+@media(max-width:768px){.product-grid{grid-template-columns:repeat(2,1fr);gap:0.6rem}}
+@media(max-width:480px){.product-grid{grid-template-columns:repeat(2,1fr);gap:0.5rem}.gc-body{padding:0.5rem 0.6rem 0.6rem}.gc-name{font-size:0.78rem}.gc-summary{font-size:0.65rem}.gc-view-btn{font-size:0.62rem;padding:0.3rem}}
 
 /* Info sections */
 .info-section{padding:4rem 1.5rem}
@@ -181,7 +184,7 @@ a{text-decoration:none;color:inherit}
 .info-card .ic{color:#2B7DE9;margin-bottom:0.75rem}
 .info-card h3{font-size:0.95rem;font-weight:800;color:#0A1628;margin-bottom:0.4rem}
 .info-card p{font-size:0.82rem;color:#64748B;line-height:1.6}
-@media(max-width:640px){.info-grid{grid-template-columns:1fr}}
+@media(max-width:640px){.info-grid{grid-template-columns:1fr;gap:0.6rem}.info-card{padding:1rem}.info-card h3{font-size:0.85rem}.info-card p{font-size:0.75rem}}
 .info-note{text-align:center;margin-top:1.5rem;font-size:0.82rem;color:#8E99A4;font-style:italic}
 
 /* Vendor directory */
@@ -190,7 +193,7 @@ a{text-decoration:none;color:inherit}
 .vendor-cat .ic{color:#2B7DE9;margin-bottom:0.75rem}
 .vendor-cat h3{font-size:0.95rem;font-weight:800;color:#0A1628;margin-bottom:0.4rem}
 .vendor-cat p{font-size:0.82rem;color:#64748B;line-height:1.5}
-@media(max-width:640px){.vendor-cats{grid-template-columns:1fr}}
+@media(max-width:640px){.vendor-cats{grid-template-columns:1fr;gap:0.6rem}.vendor-cat{padding:1rem}.vendor-cat h3{font-size:0.85rem}.vendor-cat p{font-size:0.75rem}}
 
 /* Books */
 .book-list{display:grid;grid-template-columns:repeat(2,1fr);gap:1.25rem;margin-top:2rem;max-width:800px;margin-left:auto;margin-right:auto}
@@ -311,6 +314,55 @@ footer{background:#0A1628;color:#8E99A4;padding:3rem 1.5rem 2rem}
 <svg class="ic ic-xl" viewBox="0 0 24 24"><path d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm0 14H8V4h12v12zM10 9h8v2h-8V9zm0 3h4v2h-4v-2zm0-6h8v2h-8V6z"/></svg>
 <h3>The Complete Resource</h3>
 <p>Vendor directories, testing labs, educational content, and expert guidance &mdash; all in one place.</p>
+</div>
+</div>
+</div>
+</section>
+
+<!-- RESOURCES HUB -->
+<section class="section-white section-pad" id="resources">
+<div class="section-inner">
+<div class="section-header">
+<div class="section-label">Resources</div>
+<h2 class="section-title">Your Research Toolkit</h2>
+<p class="section-sub">More than a store &mdash; we're building the most comprehensive peptide resource on the internet.</p>
+</div>
+<div class="resource-grid">
+<div class="resource-card" style="border-left-color:#2B7DE9">
+<div class="rc-icon" style="background:#2B7DE915"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#2B7DE9"><path fill="currentColor" d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"/></svg></div>
+<h3>Price Comparison Tool</h3>
+<p>Compare 387 products across 23 vendors. Find the best prices instantly.</p>
+<a href="https://frabrizio22.github.io/prc-tools/" class="rc-btn">Compare Now &rarr;</a>
+</div>
+<div class="resource-card" style="border-left-color:#10B981">
+<div class="rc-icon" style="background:#10B98115"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#10B981"><path fill="currentColor" d="M20 4H4v2h16V4zm1 10v-2l-1-5H4l-1 5v2h1v6h10v-6h4v6h2v-6h1zm-9 4H6v-4h6v4z"/></svg></div>
+<h3>Vendor Directory</h3>
+<p>Curated directory of verified research peptide vendors, organized by specialty and reputation.</p>
+<a href="#vendors" class="rc-btn">Browse Vendors &rarr;</a>
+</div>
+<div class="resource-card" style="border-left-color:#8B5CF6">
+<div class="rc-icon" style="background:#8B5CF615"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#8B5CF6"><path fill="currentColor" d="M21 5c-1.11-.35-2.33-.5-3.5-.5-1.95 0-4.05.4-5.5 1.5-1.45-1.1-3.55-1.5-5.5-1.5S2.45 4.9 1 6v14.65c0 .25.25.5.5.5.1 0 .15-.05.25-.05C3.1 20.45 5.05 20 6.5 20c1.95 0 4.05.4 5.5 1.5 1.35-.85 3.8-1.5 5.5-1.5 1.65 0 3.35.3 4.75 1.05.1.05.15.05.25.05.25 0 .5-.25.5-.5V6c-.6-.45-1.25-.75-2-1zm0 13.5c-1.1-.35-2.3-.5-3.5-.5-1.7 0-4.15.65-5.5 1.5V8c1.35-.85 3.8-1.5 5.5-1.5 1.2 0 2.4.15 3.5.5v11.5z"/></svg></div>
+<h3>Peptide Education</h3>
+<p>In-depth guides on research peptides &mdash; mechanisms, applications, and methodology.</p>
+<a href="#education" class="rc-btn">Start Learning &rarr;</a>
+</div>
+<div class="resource-card" style="border-left-color:#F59E0B">
+<div class="rc-icon" style="background:#F59E0B15"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#F59E0B"><path fill="currentColor" d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg></div>
+<h3>Vendor Reviews</h3>
+<p>Community-sourced vendor review sites to help you make informed decisions.</p>
+<a href="#reviews" class="rc-btn">Read Reviews &rarr;</a>
+</div>
+<div class="resource-card" style="border-left-color:#06B6D4">
+<div class="rc-icon" style="background:#06B6D415"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#06B6D4"><path fill="currentColor" d="M13 11.33L18 18H6l5-6.67V6h2v5.33zM15 4h1V2H8v2h1v2.33L4 11.84V22h16V11.84L15 6.33V4z"/></svg></div>
+<h3>Testing Labs</h3>
+<p>Independent third-party testing laboratories for peptide analysis and verification.</p>
+<a href="#labs" class="rc-btn">Find Labs &rarr;</a>
+</div>
+<div class="resource-card" style="border-left-color:#6366F1">
+<div class="rc-icon" style="background:#6366F115"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#6366F1"><path fill="currentColor" d="M18 2H6c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zM6 4h5v8l-2.5-1.5L6 12V4z"/></svg></div>
+<h3>Books &amp; Reading</h3>
+<p>Recommended reading for serious peptide researchers.</p>
+<a href="#books" class="rc-btn">See List &rarr;</a>
 </div>
 </div>
 </div>
@@ -494,55 +546,6 @@ footer{background:#0A1628;color:#8E99A4;padding:3rem 1.5rem 2rem}
 <div id="detailContent"></div>
 </div>
 </div>
-
-<!-- RESOURCES HUB -->
-<section class="section-white section-pad" id="resources">
-<div class="section-inner">
-<div class="section-header">
-<div class="section-label">Resources</div>
-<h2 class="section-title">Your Research Toolkit</h2>
-<p class="section-sub">More than a store &mdash; we're building the most comprehensive peptide resource on the internet.</p>
-</div>
-<div class="resource-grid">
-<div class="resource-card" style="border-left-color:#2B7DE9">
-<div class="rc-icon" style="background:#2B7DE915"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#2B7DE9"><path fill="currentColor" d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"/></svg></div>
-<h3>Price Comparison Tool</h3>
-<p>Compare 387 products across 23 vendors. Find the best prices instantly.</p>
-<a href="https://frabrizio22.github.io/prc-tools/" class="rc-btn">Compare Now &rarr;</a>
-</div>
-<div class="resource-card" style="border-left-color:#10B981">
-<div class="rc-icon" style="background:#10B98115"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#10B981"><path fill="currentColor" d="M20 4H4v2h16V4zm1 10v-2l-1-5H4l-1 5v2h1v6h10v-6h4v6h2v-6h1zm-9 4H6v-4h6v4z"/></svg></div>
-<h3>Vendor Directory</h3>
-<p>Curated directory of verified research peptide vendors, organized by specialty and reputation.</p>
-<a href="#vendors" class="rc-btn">Browse Vendors &rarr;</a>
-</div>
-<div class="resource-card" style="border-left-color:#8B5CF6">
-<div class="rc-icon" style="background:#8B5CF615"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#8B5CF6"><path fill="currentColor" d="M21 5c-1.11-.35-2.33-.5-3.5-.5-1.95 0-4.05.4-5.5 1.5-1.45-1.1-3.55-1.5-5.5-1.5S2.45 4.9 1 6v14.65c0 .25.25.5.5.5.1 0 .15-.05.25-.05C3.1 20.45 5.05 20 6.5 20c1.95 0 4.05.4 5.5 1.5 1.35-.85 3.8-1.5 5.5-1.5 1.65 0 3.35.3 4.75 1.05.1.05.15.05.25.05.25 0 .5-.25.5-.5V6c-.6-.45-1.25-.75-2-1zm0 13.5c-1.1-.35-2.3-.5-3.5-.5-1.7 0-4.15.65-5.5 1.5V8c1.35-.85 3.8-1.5 5.5-1.5 1.2 0 2.4.15 3.5.5v11.5z"/></svg></div>
-<h3>Peptide Education</h3>
-<p>In-depth guides on research peptides &mdash; mechanisms, applications, and methodology.</p>
-<a href="#education" class="rc-btn">Start Learning &rarr;</a>
-</div>
-<div class="resource-card" style="border-left-color:#F59E0B">
-<div class="rc-icon" style="background:#F59E0B15"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#F59E0B"><path fill="currentColor" d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg></div>
-<h3>Vendor Reviews</h3>
-<p>Community-sourced vendor review sites to help you make informed decisions.</p>
-<a href="#reviews" class="rc-btn">Read Reviews &rarr;</a>
-</div>
-<div class="resource-card" style="border-left-color:#06B6D4">
-<div class="rc-icon" style="background:#06B6D415"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#06B6D4"><path fill="currentColor" d="M13 11.33L18 18H6l5-6.67V6h2v5.33zM15 4h1V2H8v2h1v2.33L4 11.84V22h16V11.84L15 6.33V4z"/></svg></div>
-<h3>Testing Labs</h3>
-<p>Independent third-party testing laboratories for peptide analysis and verification.</p>
-<a href="#labs" class="rc-btn">Find Labs &rarr;</a>
-</div>
-<div class="resource-card" style="border-left-color:#6366F1">
-<div class="rc-icon" style="background:#6366F115"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#6366F1"><path fill="currentColor" d="M18 2H6c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zM6 4h5v8l-2.5-1.5L6 12V4z"/></svg></div>
-<h3>Books &amp; Reading</h3>
-<p>Recommended reading for serious peptide researchers.</p>
-<a href="#books" class="rc-btn">See List &rarr;</a>
-</div>
-</div>
-</div>
-</section>
 
 <!-- VENDOR DIRECTORY -->
 <section class="info-section section-alt" id="vendors">
