--- a/prc_site_mockup_v3.html
+++ b/prc_site_mockup_v3.html
@@ -20,9 +20,9 @@ a{text-decoration:none;color:inherit}
 .site-header{position:sticky;top:0;z-index:1000;background:rgba(255,255,255,0.97);-webkit-backdrop-filter:blur(12px);backdrop-filter:blur(12px);border-bottom:1px solid #e2e8f0;padding:0.6rem 0}
 .header-inner{max-width:1280px;margin:0 auto;padding:0 1.5rem;display:flex;align-items:center;justify-content:space-between}
 .logo-area{display:flex;flex-direction:column}
-.logo-name{font-size:1.35rem;font-weight:900;color:#0A1628;letter-spacing:-0.5px;line-height:1.1}
+.logo-name{font-size:1.4rem;font-weight:900;color:#0A1628;letter-spacing:-0.5px;line-height:1.1}
 .logo-name span{color:#2B7DE9}
-.logo-sub{font-size:0.55rem;text-transform:uppercase;letter-spacing:3px;color:#8E99A4;margin-top:1px}
+.logo-sub{font-size:0.6rem;text-transform:uppercase;letter-spacing:3px;color:#2B7DE9;font-weight:700;margin-top:2px;border-top:1.5px solid #2B7DE9;padding-top:2px;display:inline-block}
 .nav-links{display:flex;gap:1.25rem;font-size:0.82rem;font-weight:600;color:#64748B;align-items:center}
 .nav-links a:hover{color:#2B7DE9}
 .nav-links a.nav-cta{color:#fff;background:linear-gradient(135deg,#2B7DE9,#06B6D4);padding:0.4rem 1rem;border-radius:8px;font-weight:700;transition:opacity 0.2s}
@@ -37,32 +37,27 @@ a{text-decoration:none;color:inherit}
 @media(max-width:768px){.nav-links{display:none}}
 
 /* Hero */
-.hero{background:linear-gradient(135deg,#0A1628 0%,#0d2847 30%,#1a2744 60%,#0A1628 100%);color:#fff;padding:5rem 1.5rem 4rem;text-align:center;position:relative;overflow:hidden}
-.hero::before{content:"";position:absolute;top:-50%;right:-20%;width:70%;height:200%;background:radial-gradient(ellipse,rgba(43,125,233,0.2) 0%,transparent 70%);pointer-events:none;animation:hg1 6s ease-in-out infinite alternate}
-.hero::after{content:"";position:absolute;bottom:-40%;left:-20%;width:60%;height:180%;background:radial-gradient(ellipse,rgba(139,92,246,0.12) 0%,transparent 70%);pointer-events:none;animation:hg2 8s ease-in-out infinite alternate}
-@keyframes hg1{0%{transform:translate(0,0);opacity:0.5}100%{transform:translate(-30px,20px);opacity:1}}
-@keyframes hg2{0%{transform:translate(0,0);opacity:0.4}100%{transform:translate(20px,-15px);opacity:0.9}}
-.hero-geo{position:absolute;top:15%;right:5%;width:200px;height:200px;border:1px solid rgba(43,125,233,0.15);border-radius:50%;pointer-events:none;animation:spin 30s linear infinite}
-.hero-geo2{position:absolute;bottom:10%;left:8%;width:120px;height:120px;border:1px solid rgba(6,182,212,0.1);transform:rotate(45deg);pointer-events:none}
-.hero-geo3{position:absolute;top:40%;left:15%;width:60px;height:60px;border:1px solid rgba(139,92,246,0.1);border-radius:50%;pointer-events:none;animation:spin 20s linear infinite reverse}
-@keyframes spin{to{transform:rotate(360deg)}}
+.hero{background:#0A1628;color:#fff;padding:5.5rem 1.5rem 4.5rem;text-align:center;position:relative;overflow:hidden}
+.hero::before{content:"";position:absolute;top:0;left:0;right:0;bottom:0;background:linear-gradient(160deg,transparent 30%,rgba(43,125,233,0.08) 50%,transparent 70%);pointer-events:none}
+.hero::after{content:"";position:absolute;bottom:0;left:0;right:0;height:1px;background:linear-gradient(90deg,transparent,#2B7DE9,#06B6D4,transparent);pointer-events:none}
+.hero-geo,.hero-geo2,.hero-geo3{display:none}
 .hero-inner{max-width:850px;margin:0 auto;position:relative;z-index:1}
-.hero h1{font-size:3.2rem;font-weight:900;letter-spacing:-2px;line-height:1.05;margin-bottom:0.5rem}
-.hero h1 .gradient-text{background:linear-gradient(135deg,#2B7DE9,#06B6D4,#8B5CF6);-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text}
-.hero-tagline{font-size:1.1rem;color:#06B6D4;font-weight:600;letter-spacing:2px;text-transform:uppercase;margin-bottom:0.75rem}
-.hero-subtitle{font-size:1rem;color:#94a3b8;margin-bottom:2rem;font-weight:400;max-width:600px;margin-left:auto;margin-right:auto}
+.hero h1{font-size:2.8rem;font-weight:900;letter-spacing:-1.5px;line-height:1.05;margin-bottom:0.5rem;color:#fff}
+.hero h1 .gradient-text{color:#2B7DE9}
+.hero-tagline{font-size:0.75rem;color:rgba(255,255,255,0.5);font-weight:600;letter-spacing:5px;text-transform:uppercase;margin-bottom:1.5rem}
+.hero-subtitle{font-size:1.05rem;color:rgba(255,255,255,0.6);margin-bottom:2.5rem;font-weight:400;max-width:600px;margin-left:auto;margin-right:auto;line-height:1.7}
 .hero-ctas{display:flex;justify-content:center;gap:1rem;flex-wrap:wrap;margin-bottom:2.5rem}
 .hero-cta{display:inline-block;font-size:0.9rem;font-weight:700;padding:0.8rem 2rem;border-radius:10px;transition:all 0.25s;min-height:44px;line-height:1.5}
-.hero-cta-primary{background:linear-gradient(135deg,#2B7DE9,#1d6ad4);color:#fff;border:2px solid transparent;box-shadow:0 4px 20px rgba(43,125,233,0.3)}
-.hero-cta-primary:hover{box-shadow:0 6px 30px rgba(43,125,233,0.5);transform:translateY(-1px)}
-.hero-cta-secondary{background:transparent;color:#fff;border:2px solid rgba(255,255,255,0.25)}
-.hero-cta-secondary:hover{border-color:rgba(255,255,255,0.6);background:rgba(255,255,255,0.05)}
-.hero-stats{display:flex;justify-content:center;gap:2.5rem;flex-wrap:wrap}
+.hero-cta-primary{background:#2B7DE9;color:#fff;border:2px solid #2B7DE9}
+.hero-cta-primary:hover{background:#1d6ad4;border-color:#1d6ad4;transform:translateY(-1px)}
+.hero-cta-secondary{background:transparent;color:rgba(255,255,255,0.8);border:2px solid rgba(255,255,255,0.2)}
+.hero-cta-secondary:hover{color:#fff;border-color:rgba(255,255,255,0.5)}
+.hero-stats{display:grid;grid-template-columns:repeat(4,auto);justify-content:center;gap:2.5rem}
 .stat{text-align:center;padding:0 0.5rem}
-.stat-num{font-size:2.25rem;font-weight:900;color:#fff;line-height:1}
-.stat-label{font-size:0.65rem;text-transform:uppercase;letter-spacing:2px;color:#64748B;margin-top:0.25rem}
-.stat-divider{width:1px;background:rgba(255,255,255,0.1);align-self:stretch}
-@media(max-width:640px){.hero{padding:3rem 1.25rem 2.5rem}.hero h1{font-size:2rem;letter-spacing:-1px}.hero-stats{gap:1.25rem}.stat-num{font-size:1.6rem}.hero-ctas{flex-direction:column;align-items:center}.hero-cta{width:100%;max-width:280px;text-align:center}.stat-divider{display:none}.hero-geo,.hero-geo2,.hero-geo3{display:none}}
+.stat-num{font-size:2.25rem;font-weight:900;color:#2B7DE9;line-height:1}
+.stat-label{font-size:0.65rem;text-transform:uppercase;letter-spacing:2px;color:rgba(255,255,255,0.4);margin-top:0.35rem}
+.stat-divider{width:1px;background:rgba(255,255,255,0.08);align-self:stretch}
+@media(max-width:640px){.hero{padding:2.5rem 1.25rem 2rem}.hero h1{font-size:1.6rem;letter-spacing:-0.5px}.hero-stats{grid-template-columns:repeat(2,auto);gap:1.25rem 2rem}.stat-num{font-size:1.5rem}.hero-ctas{flex-direction:column;align-items:center}.hero-cta{width:100%;max-width:280px;text-align:center}.stat-divider{display:none}}
 
 /* Trust bar */
 .trust{background:#f8fafc;border-top:1px solid #e2e8f0;border-bottom:1px solid #e2e8f0;padding:1.25rem}
@@ -76,35 +71,40 @@ a{text-decoration:none;color:inherit}
 /* Sections */
 .section-alt{background:#f8fafc}
 .section-white{background:#fff}
-.section-pad{padding:4rem 1.5rem}
+.section-pad{padding:3.5rem 1.5rem}
+@media(max-width:768px){.section-pad{padding:2rem 1rem}}
 .section-inner{max-width:1280px;margin:0 auto}
 .section-header{text-align:center;margin-bottom:2.5rem}
-.section-label{font-size:0.65rem;text-transform:uppercase;letter-spacing:4px;color:#2B7DE9;font-weight:700;margin-bottom:0.4rem}
-.section-title{font-size:2.25rem;font-weight:900;color:#0A1628;letter-spacing:-1.5px;margin-bottom:0.4rem}
-.section-sub{font-size:0.9rem;color:#8E99A4;max-width:600px;margin:0 auto}
+.section-label{font-size:0.6rem;text-transform:uppercase;letter-spacing:4px;color:#2B7DE9;font-weight:700;margin-bottom:0.3rem}
+.section-title{font-size:1.75rem;font-weight:900;color:#0A1628;letter-spacing:-1px;margin-bottom:0.3rem}
+.section-sub{font-size:0.85rem;color:#8E99A4;max-width:550px;margin:0 auto}
+@media(max-width:640px){.section-title{font-size:1.4rem}.section-sub{font-size:0.78rem}}
 
 /* Why PRC */
 .why-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:1.5rem;max-width:1000px;margin:0 auto}
-.why-card{padding:2rem 1.5rem;border-radius:12px;background:#fff;border:1px solid #e2e8f0;text-align:center;transition:all 0.25s}
-.why-card:hover{box-shadow:0 8px 25px rgba(0,0,0,0.08);transform:translateY(-2px)}
-.why-card .ic{color:#2B7DE9;margin-bottom:1rem}
-.why-card h3{font-size:1rem;font-weight:800;color:#0A1628;margin-bottom:0.5rem}
-.why-card p{font-size:0.85rem;color:#64748B;line-height:1.6}
-@media(max-width:768px){.why-grid{grid-template-columns:1fr}}
+.why-card{padding:1.25rem;border-radius:10px;background:#fff;border:1px solid #e2e8f0;text-align:center;transition:all 0.2s}
+.why-card:hover{box-shadow:0 4px 12px rgba(0,0,0,0.06)}
+.why-card .ic{color:#2B7DE9;margin-bottom:0.5rem}
+.why-card h3{font-size:0.85rem;font-weight:800;color:#0A1628;margin-bottom:0.3rem}
+.why-card p{font-size:0.78rem;color:#64748B;line-height:1.5}
+@media(max-width:768px){.why-grid{grid-template-columns:1fr;gap:0.5rem}.why-card{padding:1rem;text-align:left;display:flex;align-items:center;gap:0.75rem}.why-card .ic{margin-bottom:0;flex-shrink:0}.why-card h3{font-size:0.8rem;margin-bottom:0.15rem}.why-card p{font-size:0.72rem}}
 
 /* Resource cards */
 .resource-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:1.25rem;max-width:1100px;margin:0 auto}
-.resource-card{background:#fff;border-radius:12px;padding:1.5rem;border:1px solid #e2e8f0;border-left:4px solid #2B7DE9;transition:all 0.25s;display:flex;flex-direction:column}
-.resource-card:hover{box-shadow:0 8px 25px rgba(0,0,0,0.1);transform:translateY(-3px)}
-.resource-card .rc-icon{width:48px;height:48px;border-radius:10px;display:flex;align-items:center;justify-content:center;margin-bottom:1rem}
-.resource-card h3{font-size:0.95rem;font-weight:800;color:#0A1628;margin-bottom:0.4rem}
-.resource-card p{font-size:0.82rem;color:#64748B;line-height:1.5;flex:1;margin-bottom:1rem}
-.rc-btn{display:inline-block;font-size:0.75rem;font-weight:700;color:#2B7DE9;padding:0.4rem 0.8rem;border:1.5px solid #2B7DE9;border-radius:8px;transition:all 0.2s;min-height:32px;line-height:1.6}
-.rc-btn:hover{background:#2B7DE9;color:#fff}
-@media(max-width:768px){.resource-grid{grid-template-columns:1fr}}
+.resource-card{background:#fff;border-radius:10px;padding:0.85rem 1rem;border:1px solid #e2e8f0;border-left:3px solid #2B7DE9;transition:all 0.2s;display:flex;align-items:center;gap:0.75rem}
+.resource-card:hover{box-shadow:0 4px 12px rgba(0,0,0,0.06);transform:translateY(-1px)}
+.resource-card .rc-icon{width:36px;height:36px;min-width:36px;border-radius:8px;display:flex;align-items:center;justify-content:center}
+.resource-card .rc-icon .ic{width:18px;height:18px}
+.rc-text{flex:1;min-width:0}
+.resource-card h3{font-size:0.8rem;font-weight:800;color:#0A1628;margin-bottom:0.1rem}
+.resource-card p{font-size:0.7rem;color:#64748B;line-height:1.4;margin:0}
+.rc-btn{display:inline-block;font-size:0.65rem;font-weight:700;color:#2B7DE9;margin-left:auto;white-space:nowrap;flex-shrink:0}
+.rc-btn:hover{text-decoration:underline}
+@media(max-width:768px){.resource-grid{grid-template-columns:1fr;gap:0.5rem}.resource-card{padding:0.7rem 0.85rem}}
 
 /* Featured */
 .featured-bg{background:linear-gradient(135deg,#f0f7ff 0%,#faf5ff 50%,#f0fdfa 100%);padding:4rem 1.5rem;position:relative}
+@media(max-width:768px){.featured-bg{padding:2.5rem 1rem}}
 .featured-bg::before{content:"";position:absolute;top:0;left:0;right:0;height:1px;background:linear-gradient(90deg,transparent,#e2e8f0,transparent)}
 .featured-grid{display:grid;grid-template-columns:repeat(4,1fr);gap:1rem;max-width:1280px;margin:0 auto}
 .featured-card{background:#fff;border-radius:12px;padding:1.25rem;transition:all 0.3s;position:relative;border:1px solid #e2e8f0;overflow:hidden}
@@ -120,16 +120,16 @@ a{text-decoration:none;color:inherit}
 .fc-btn{display:inline-block;font-size:0.75rem;font-weight:700;color:#2B7DE9;padding:0.4rem 0.8rem;border:1.5px solid #2B7DE9;border-radius:8px;transition:all 0.2s;cursor:pointer;min-height:36px;line-height:1.6}
 .fc-btn:hover{background:#2B7DE9;color:#fff}
 @media(max-width:1024px){.featured-grid{grid-template-columns:repeat(2,1fr)}}
-@media(max-width:640px){.featured-grid{grid-template-columns:1fr;gap:0.75rem}}
+@media(max-width:640px){.featured-grid{grid-template-columns:repeat(2,1fr);gap:0.6rem}.featured-card{padding:0.85rem}.fc-icon-wrap{display:none}.fc-name{font-size:0.82rem}.fc-desc{font-size:0.7rem;-webkit-line-clamp:2}.fc-btn{font-size:0.65rem;padding:0.3rem 0.6rem;min-height:28px}}
 
 /* Category tiles */
 .cat-tiles{display:grid;grid-template-columns:repeat(5,1fr);gap:0.75rem}
-.cat-tile{border-radius:12px;padding:1.25rem 1rem;text-align:center;cursor:pointer;transition:all 0.25s;position:relative;overflow:hidden;border:1px solid transparent}
-.cat-tile:hover{transform:translateY(-3px);box-shadow:0 8px 25px rgba(0,0,0,0.12)}
-.cat-tile-icon{margin-bottom:0.4rem;display:flex;justify-content:center}
-.cat-tile-icon .ic{fill:#fff;width:28px;height:28px}
-.cat-tile-name{font-size:0.78rem;font-weight:800;color:#fff;margin-bottom:0.15rem}
-.cat-tile-count{font-size:0.65rem;font-weight:600;color:rgba(255,255,255,0.75)}
+.cat-tile{border-radius:8px;padding:0.75rem 0.5rem;text-align:center;cursor:pointer;transition:all 0.2s;position:relative;overflow:hidden;border:1px solid transparent}
+.cat-tile:hover{transform:translateY(-2px);box-shadow:0 4px 12px rgba(0,0,0,0.1)}
+.cat-tile-icon{margin-bottom:0.25rem;display:flex;justify-content:center}
+.cat-tile-icon .ic{fill:#fff;width:22px;height:22px}
+.cat-tile-name{font-size:0.68rem;font-weight:800;color:#fff;margin-bottom:0.1rem}
+.cat-tile-count{font-size:0.58rem;font-weight:600;color:rgba(255,255,255,0.75)}
 @media(max-width:900px){.cat-tiles{grid-template-columns:repeat(3,1fr)}}
 @media(max-width:500px){.cat-tiles{grid-template-columns:repeat(2,1fr)}}
 
@@ -148,13 +148,13 @@ a{text-decoration:none;color:inherit}
 .grid-card:hover{box-shadow:0 12px 35px rgba(0,0,0,0.12);transform:translateY(-4px)}
 .grid-card:hover .gc-color-band{filter:brightness(1.08)}
 .grid-card.hidden{display:none}
-.gc-color-band{padding:2rem 1rem;display:flex;align-items:center;justify-content:center;flex-direction:column;gap:0.5rem;min-height:130px;transition:filter 0.3s}
-.gc-color-band .ic{fill:#fff;width:48px;height:48px;opacity:0.95}
-.gc-cat-label{font-size:0.58rem;font-weight:700;text-transform:uppercase;letter-spacing:1.5px;color:#fff;opacity:0.85}
-.gc-body{padding:0.85rem 1rem 1rem;flex:1;display:flex;flex-direction:column}
-.gc-name{font-size:0.85rem;font-weight:800;color:#0A1628;line-height:1.25;margin-bottom:0.25rem;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
-.gc-summary{font-size:0.75rem;color:#8E99A4;line-height:1.4;margin-bottom:0.65rem;flex:1;display:-webkit-box;-webkit-line-clamp:1;-webkit-box-orient:vertical;overflow:hidden}
-.gc-view-btn{display:block;font-size:0.7rem;font-weight:700;text-align:center;padding:0.45rem;border:1.5px solid;border-radius:8px;transition:all 0.2s;cursor:pointer;background:none;font-family:inherit;min-height:34px;width:100%}
+.gc-color-band{padding:0.75rem 0.5rem;display:flex;align-items:center;gap:0.5rem;min-height:0;transition:filter 0.3s}
+.gc-color-band .ic{fill:#fff;width:20px;height:20px;opacity:0.95;flex-shrink:0}
+.gc-cat-label{font-size:0.55rem;font-weight:700;text-transform:uppercase;letter-spacing:1px;color:#fff;opacity:0.9}
+.gc-body{padding:0.6rem 0.75rem 0.75rem;flex:1;display:flex;flex-direction:column}
+.gc-name{font-size:0.82rem;font-weight:800;color:#0A1628;line-height:1.25;margin-bottom:0.2rem;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
+.gc-summary{font-size:0.7rem;color:#8E99A4;line-height:1.35;margin-bottom:0.5rem;flex:1;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
+.gc-view-btn{display:block;font-size:0.68rem;font-weight:700;text-align:center;padding:0.35rem;border:1.5px solid;border-radius:6px;transition:all 0.2s;cursor:pointer;background:none;font-family:inherit;min-height:30px;width:100%}
 .gc-view-btn:hover{color:#fff !important}
 
 /* Detail modal */
@@ -173,11 +173,12 @@ a{text-decoration:none;color:inherit}
 .detail-storage{font-size:0.8rem;color:#64748B;line-height:1.7;margin-bottom:0.75rem;padding:0.75rem;background:#f8fafc;border-radius:8px;border-left:3px solid #06B6D4}
 
 @media(max-width:1100px){.product-grid{grid-template-columns:repeat(3,1fr)}}
-@media(max-width:768px){.product-grid{grid-template-columns:repeat(2,1fr)}.gc-color-band{min-height:110px;padding:1.5rem 0.75rem}}
-@media(max-width:480px){.product-grid{grid-template-columns:repeat(2,1fr);gap:0.65rem}.gc-color-band{min-height:100px;padding:1.25rem 0.5rem}.gc-color-band .ic{width:40px;height:40px}.gc-body{padding:0.65rem 0.75rem 0.75rem}.gc-name{font-size:0.8rem}}
+@media(max-width:768px){.product-grid{grid-template-columns:repeat(2,1fr);gap:0.6rem}}
+@media(max-width:480px){.product-grid{grid-template-columns:repeat(2,1fr);gap:0.5rem}.gc-body{padding:0.5rem 0.6rem 0.6rem}.gc-name{font-size:0.78rem}.gc-summary{font-size:0.65rem}.gc-view-btn{font-size:0.62rem;padding:0.3rem}}
 
 /* Info sections */
-.info-section{padding:4rem 1.5rem}
+.info-section{padding:3rem 1.5rem}
+@media(max-width:768px){.info-section{padding:2rem 1rem}}
 .info-inner{max-width:1000px;margin:0 auto}
 .info-grid{display:grid;grid-template-columns:repeat(2,1fr);gap:1.25rem;margin-top:2rem}
 .info-card{background:#fff;border:1px solid #e2e8f0;border-radius:12px;padding:1.5rem;transition:all 0.25s}
@@ -185,7 +186,7 @@ a{text-decoration:none;color:inherit}
 .info-card .ic{color:#2B7DE9;margin-bottom:0.75rem}
 .info-card h3{font-size:0.95rem;font-weight:800;color:#0A1628;margin-bottom:0.4rem}
 .info-card p{font-size:0.82rem;color:#64748B;line-height:1.6}
-@media(max-width:640px){.info-grid{grid-template-columns:1fr}}
+@media(max-width:640px){.info-grid{grid-template-columns:1fr;gap:0.6rem}.info-card{padding:1rem}.info-card h3{font-size:0.85rem}.info-card p{font-size:0.75rem}}
 .info-note{text-align:center;margin-top:1.5rem;font-size:0.82rem;color:#8E99A4;font-style:italic}
 
 /* Vendor directory */
@@ -194,7 +195,7 @@ a{text-decoration:none;color:inherit}
 .vendor-cat .ic{color:#2B7DE9;margin-bottom:0.75rem}
 .vendor-cat h3{font-size:0.95rem;font-weight:800;color:#0A1628;margin-bottom:0.4rem}
 .vendor-cat p{font-size:0.82rem;color:#64748B;line-height:1.5}
-@media(max-width:640px){.vendor-cats{grid-template-columns:1fr}}
+@media(max-width:640px){.vendor-cats{grid-template-columns:1fr;gap:0.6rem}.vendor-cat{padding:1rem}.vendor-cat h3{font-size:0.85rem}.vendor-cat p{font-size:0.75rem}}
 
 /* Books */
 .book-list{display:grid;grid-template-columns:repeat(2,1fr);gap:1.25rem;margin-top:2rem;max-width:800px;margin-left:auto;margin-right:auto}
@@ -263,7 +264,7 @@ footer{background:#0A1628;color:#8E99A4;padding:3rem 1.5rem 2rem}
 <div class="hero-geo2"></div>
 <div class="hero-geo3"></div>
 <div class="hero-inner">
-<h1><span class="gradient-text">PEPTIDE RESOURCE<br>CENTER</span></h1>
+<h1><span class="gradient-text">PEPTIDE RESOURCE CENTER</span></h1>
 <div class="hero-tagline">The Peptide Authority</div>
 <p class="hero-subtitle">Your comprehensive destination for research peptide resources, education, and premium products</p>
 <div class="hero-ctas">
